--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="chat-container">
-        <h1>Real-Time Chat</h1>
+        <h1>FastAPI WebSocket Chat</h1>
         
         <div class="username-container" id="usernameForm">
             <h2>Enter your username</h2>
